methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:16: error: type mismatch;
 found   : Unit
 required: Boolean
    gauche()
          ^